--- a/SwitchKey/Base.lproj/SwitchKey.xib
+++ b/SwitchKey/Base.lproj/SwitchKey.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="15705" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="22505" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="15705"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="22505"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -28,7 +28,7 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <clipView key="contentView" id="gGO-yu-YCr">
                 <rect key="frame" x="1" y="1" width="360" height="0.0"/>
-                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnReordering="NO" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" typeSelect="NO" rowSizeStyle="automatic" viewBased="YES" id="wpb-1K-Xeg" customClass="TableView" customModule="SwitchKey" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="360" height="0.0"/>
@@ -37,9 +37,8 @@
                         <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                         <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                         <tableColumns>
-                            <tableColumn width="357" minWidth="40" maxWidth="1000" id="Y12-MF-ZTz">
+                            <tableColumn width="348" minWidth="40" maxWidth="1000" id="Y12-MF-ZTz">
                                 <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border">
-                                    <font key="font" metaFont="menu" size="11"/>
                                     <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
                                 </tableHeaderCell>
@@ -59,7 +58,7 @@
                 <autoresizingMask key="autoresizingMask"/>
             </scroller>
             <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="5LF-KM-I9F">
-                <rect key="frame" x="346" y="1" width="15" height="0.0"/>
+                <rect key="frame" x="345" y="1" width="16" height="0.0"/>
                 <autoresizingMask key="autoresizingMask"/>
             </scroller>
             <point key="canvasLocation" x="139" y="185"/>
@@ -76,7 +75,7 @@
                     </constraints>
                     <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="NSApplicationIcon" id="pGI-gj-dvK"/>
                 </imageView>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="61R-Cm-pCP">
+                <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="61R-Cm-pCP">
                     <rect key="frame" x="62" y="24" width="68" height="16"/>
                     <textFieldCell key="cell" lineBreakMode="clipping" title="AppName" id="AGL-f7-fn1">
                         <font key="font" metaFont="systemBold"/>
@@ -96,14 +95,14 @@
                 </button>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="p83-hg-Sms">
                     <rect key="frame" x="295" y="24" width="16" height="16"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="16" id="52L-E7-7fe"/>
-                        <constraint firstAttribute="height" constant="16" id="krz-z6-4aC"/>
-                    </constraints>
                     <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="UsN-ai-CGg">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
                     </buttonCell>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="16" id="52L-E7-7fe"/>
+                        <constraint firstAttribute="height" constant="16" id="krz-z6-4aC"/>
+                    </constraints>
                     <connections>
                         <action selector="inputSourceButtonClicked:" target="mER-eV-t2b" id="GEs-2X-8gP"/>
                     </connections>
@@ -135,16 +134,16 @@
             <subviews>
                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="5k7-2A-D1v">
                     <rect key="frame" x="8" y="-1" width="93" height="21"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="20" id="IDr-fh-azF"/>
-                    </constraints>
                     <buttonCell key="cell" type="roundRect" title="Add Current" bezelStyle="roundedRect" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="XiT-Jr-Qlg">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                        <font key="font" metaFont="label" size="12"/>
+                        <font key="font" metaFont="cellTitle"/>
                         <connections>
                             <action selector="addItemClicked:" target="tGE-D6-w3H" id="1xs-Ii-GnG"/>
                         </connections>
                     </buttonCell>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="20" id="IDr-fh-azF"/>
+                    </constraints>
                 </button>
             </subviews>
             <constraints>
